EjemplProyect2/cluster/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-grpc
  namespace: project
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST"
spec:
  rules:
  - host: <<IP_INGRESS_CONTROLLER>>.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: <<SERVICE_NAME>>
            port:
              number: <<SERVICE_PORT>>
